; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_struct.c_makerect.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_struct.c_makerect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local { i8*, i8* } @makerect(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_5__, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 1
  store i8* %7, i8** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  store i8* %9, i8** %10, align 8
  %11 = bitcast %struct.TYPE_5__* %6 to { i8*, i8* }*
  %12 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  %14 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %11, i32 0, i32 1
  %15 = load i8*, i8** %14, align 8
  %16 = call { i8*, i8* } @canonrect(i8* %13, i8* %15)
  %17 = bitcast %struct.TYPE_5__* %3 to { i8*, i8* }*
  %18 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %17, i32 0, i32 0
  %19 = extractvalue { i8*, i8* } %16, 0
  store i8* %19, i8** %18, align 8
  %20 = getelementptr inbounds { i8*, i8* }, { i8*, i8* }* %17, i32 0, i32 1
  %21 = extractvalue { i8*, i8* } %16, 1
  store i8* %21, i8** %20, align 8
  %22 = bitcast %struct.TYPE_5__* %3 to { i8*, i8* }*
  %23 = load { i8*, i8* }, { i8*, i8* }* %22, align 8
  ret { i8*, i8* } %23
}

declare dso_local { i8*, i8* } @canonrect(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
